--- a/src/components/css/codeBlock.css
+++ b/src/components/css/codeBlock.css
@@ -1,25 +1,12 @@
-.code-container {
-    position: relative;
-  }
-  
-  .copy-button {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 6px 12px;
-    border-radius: 4px;
-    cursor: pointer;
-    position: relative;
-    top:-11rem;
-    left: 17.5rem;
-    display: flex;
-    align-items: center;
-  }
-  
-  .copy-button svg {
-    margin-right: 4px;
-  }
+
   .code-container{
-    border:2px solid green;
-    width: fit-content
+    /* border:2px solid green; */
+
+    width: 100%;
+  }
+ 
+  .custom-code-block {
+    width: fit-content; /* Set your desired width */
+    overflow-x: hidden; /* Enable horizontal scrolling if needed */
+    white-space:pre-wrap; /* Wrap text */
   }
