--- a/src/pages/Buttons/button.css
+++ b/src/pages/Buttons/button.css
@@ -1,11 +1,15 @@
-.avatar{
+.button{
     /* border:2px solid green; */
     display: grid;
     grid-template-columns: 16rem auto;
 }
-.avatars{
+.buttons{
     margin-top: 3rem;
     display: flex;
     flex-direction: column;
     gap:2rem;
+}
+.view{
+    display: flex;
+    gap:10px;
 }
